--- a/travel-unravel_Final/coming-soon.html
+++ b/travel-unravel_Final/coming-soon.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="csrf-token" content="wvpCAxAP4XAMZjJ94zyhGhQdCdgxZY0MxDMHUzr7">
-	<title>:: No Result Found ::</title>
+	<title>:: Coming Soon ::</title>
 	<meta name="title" content="">
 	<meta name="keywords" content="">
 	<meta name="description" content="">
@@ -57,10 +57,10 @@
 						<li class="nav-item">
 							<a class="nav-link" href="contact_us.html">Contact Us</a>
 						</li>
-						<li class="nav-item nav-itemBtn">
+						<li class="nav-item nav-itemBtn" style="display: none;">
 							<a class="nav-link btn" href="login-with-email.html"><span class="material-symbols-outlined">person</span>Login</a>
 						</li>
-						<li class="nav-item nav-itemBtn" style="display: none;">
+						<li class="nav-item nav-itemBtn">
 							<a href="profile.html">
 								<div class="user_profile">
 									<img src="images/user_img.jpg" alt="User Profile" loading="lazy" />
@@ -155,31 +155,22 @@
 </section>
 <!-- END banner -->
 
-<!-- START noResultsMain -->
-<section class="noResultsMain">
-    <div class="noResultsOuter">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 col-sm-12">
-                    <div class="noResultsInner">
-                        <img class="img-fluid" src="images/artwork.png" loading="lazy" />
-						<h2>Uh-Oh!<br> No Results Found</h2>
-                        <p>Looks like we seem to be missing the results for your query IXC to MEL</p>
-                    </div>
-					<div class="noResultsBottom">
-						<h5>For any urgent requests</h5>
-						<ul>
-							<li><a href="#">0203 588 8444</li>
-							<li><a href="#">info@travelunravel.com</li>
-							<li><a href="#">Request a callback</li>
-						</ul>
-					</div>
-                </div>
-            </div>
-        </div>
-    </div>
+<!-- START comingSoon -->
+<section class="comingSoonMain">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12 col-sm-12">
+				<div class="comingSoonInner">
+					<img class="img-fluid" src="images/comingSoon.svg" loading="lazy" />
+					<h2>Coming Soon</h2>
+					<p>We are working hard on our website. Follow us and you<br/> will be the first one to know when it is ready.</p>
+					<a href="index.html" class="btn btnBlack">Back to home</a>
+				</div>
+			</div>
+		</div>
+	</div>
 </section>
-<!-- END noResultsMain -->
+<!-- END comingSoon -->
 
 
 <!-- START FOOTER -->
