--- a/travel-unravel_Final/cookies_policy.html
+++ b/travel-unravel_Final/cookies_policy.html
@@ -52,12 +52,12 @@
 							</div>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">About Us</a>
+							<a class="nav-link" href="about_us.html">About Us</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="contact_us.html">Contact Us</a>
 						</li>
-						<!-- <li class="nav-item nav-itemBtn">
+						<li class="nav-item nav-itemBtn">
 							<a class="nav-link btn" href="login-with-email.html"><span class="material-symbols-outlined">person</span>Login</a>
 						</li>
 						<li class="nav-item nav-itemBtn" style="display: none;">
@@ -66,7 +66,7 @@
 									<img src="images/user_img.jpg" alt="User Profile" loading="lazy" />
 								</div>
 							</a>
-						</li> -->
+						</li>
 					</ul>
 					<div class="mobile-nav">
 						<div class="b-nav">
@@ -129,10 +129,10 @@
 									</div>
 								</div>
 								<div class="accordion-item">
-									<a href="#"><h2 class="accordion-header">About Us</h2></a>
+									<a href="about_us.html"><h2 class="accordion-header">About Us</h2></a>
 								</div>
 								<div class="accordion-item">
-									<a href="#"><h2 class="accordion-header">Contact Us</h2></a>
+									<a href="contact_us.html"><h2 class="accordion-header">Contact Us</h2></a>
 								</div>
 							</div>
 						</div>
@@ -263,15 +263,15 @@
 						<h3>Quick Links</h3>
 						<ul>
 							<li><a href="about_us.html">About Us</a></li>
-							<li><a href="#">Disclaimer </a></li>
+							<li><a href="disclaimer.html">Disclaimer </a></li>
 							<li><a href="faq.html">FAQs</a></li>
-							<li><a href="#">Why Travel with Us? </a></li>
-							<li><a href="#">Self Payment</a></li>
-							<li><a href="#">Sitemap</a></li>
+							<li><a href="why-travel-with-us.html">Why Travel with Us? </a></li>
+							<li><a href="javascript:void(0);">Self Payment</a></li>
+							<li><a href="javascript:void(0);">Sitemap</a></li>
 						</ul>
 						<h3>Travel Partner</h3>
 						<ul>
-							<li><a href="#">Carbon Neutral Britain</a></li>
+							<li><a href="travel_partner.html">Carbon Neutral Britain</a></li>
 						</ul>
 					</div>
 				</div>
@@ -284,7 +284,7 @@
 							<li><a href="data_protection_policy.html">Data Protection Policy</a></li>
 							<li><a href="privacy_policy.html">Privacy Policy</a></li>
 							<li><a href="cookies_policy.html">Cookies Policy</a></li>
-							<li><a href="#">Travel Partner</a></li>
+							<li><a href="travel_partner.html">Travel Partner</a></li>
 						</ul>
 					</div>
 				</div>
