--- a/travel-unravel_Final/travel_partner.html
+++ b/travel-unravel_Final/travel_partner.html
@@ -4,10 +4,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="csrf-token" content="wvpCAxAP4XAMZjJ94zyhGhQdCdgxZY0MxDMHUzr7">
-	<title>Error 404</title>
-	<meta name="title" content="">
+	<title>:: Travel Partner ::</title>
+	<meta name="title" content="Travel Partner">
 	<meta name="keywords" content="">
 	<meta name="description" content="">
+	<link async="" rel="canonical" href="https://www.travelunravel.com/">
 
 	<!-- CSS -->
 	<link rel="icon" href="images/favicon.ico" type="image/x-icon">
@@ -19,7 +20,8 @@
 <body>
 
 <!-- START banner -->
-<section class="banner">
+<section class="travelBanner">
+	<!-- START header -->
 	<header>
 		<div class="profile_header2">
 			<nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -52,12 +54,12 @@
 							</div>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="about_us.html">About Us</a>
+							<a class="nav-link" href="#">About Us</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="contact_us.html">Contact Us</a>
 						</li>
-						<li class="nav-item nav-itemBtn">
+						<!-- <li class="nav-item nav-itemBtn">
 							<a class="nav-link btn" href="login-with-email.html"><span class="material-symbols-outlined">person</span>Login</a>
 						</li>
 						<li class="nav-item nav-itemBtn" style="display: none;">
@@ -66,7 +68,7 @@
 									<img src="images/user_img.jpg" alt="User Profile" loading="lazy" />
 								</div>
 							</a>
-						</li>
+						</li> -->
 					</ul>
 					<div class="mobile-nav">
 						<div class="b-nav">
@@ -129,10 +131,10 @@
 									</div>
 								</div>
 								<div class="accordion-item">
-									<a href="about_us.html"><h2 class="accordion-header">About Us</h2></a>
+									<a href="#"><h2 class="accordion-header">About Us</h2></a>
 								</div>
 								<div class="accordion-item">
-									<a href="contact_us.html"><h2 class="accordion-header">Contact Us</h2></a>
+									<a href="#"><h2 class="accordion-header">Contact Us</h2></a>
 								</div>
 							</div>
 						</div>
@@ -152,116 +154,237 @@
 		</div>
 	</header>
 	<!-- END header -->
+
+	<!-- START bannerArea -->
+	<div class="travelBannerArea">
+		<div class="container">
+			<div class="travelBannerAreaInner">
+				<h1>Take A Step In The Right Direction</h1>
+				<img src="images/carbon-logo.png" alt="carbon logo" />
+				<h2>Carbon offset your flights</h2>
+				<p>Travel Unravel is now partners with UK’s #1 Carbon Offsetting Initiative - Carbon Neutral Britain™ to provide carbon offsetting for the journeys taken by you.</p>
+			</div>
+		</div>
+	</div>
+	<!-- END bannerArea -->
 </section>
 <!-- END banner -->
 
-	<section class="error_sec1">
-		<div class="container">
-			<div class="error_sec2">
-				<img src="images/error-404.svg" alt="Error 404" loading="lazy" />
-				<h3>Oops! Page Not Found</h3>
-				<p>You seem to have travelled to the wrong address; the page you’re looking for doesn’t exist.</p>
-			    <a href="index.html">Go to Homepage.</a>
-			</div>
-		</div>
-	</section> 
 
-	
-<!-- START FOOTER -->
-<footer class="footer">
+<!-- START travelMissionMain -->
+<section class="travelMissionMain">
 	<div class="container">
-		<div class="footerTop">
-			<div class="row">
-				<div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 footerRES">
-					<div class="footerInner">
-						<a class="logoFooter" href="index.html"><img src="images/logo.svg" alt="logo" loading="lazy" /></a>
-						<div class="siteDetails">
-							<h3>Travel Unravel Holidays Private Limited</h3>
-							<p>Bearing Registration Number 07445398 is a company registered in England and Wales at Rear Ground Floor Hygeia Building, 66-68 College Road, Harrow, Middlesex, United Kingdom, HA1 1BE.</p>
-						</div>
-						<div class="siteDetails">
-							<h3>Corporate Office</h3>
-							<p>Corporate OfficeTravel Unravel Holidays<br /> 30th Floor 40 bank street<br /> Canary Wharf London E14 5NR</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12 footerRES">
-					<div class="footerInner">
-						<h3>Quick Links</h3>
-						<ul>
-							<li><a href="about_us.html">About Us</a></li>
-							<li><a href="disclaimer.html">Disclaimer </a></li>
-							<li><a href="faq.html">FAQs</a></li>
-							<li><a href="why-travel-with-us.html">Why Travel with Us? </a></li>
-							<li><a href="javascript:void(0);">Self Payment</a></li>
-							<li><a href="javascript:void(0);">Sitemap</a></li>
-						</ul>
-						<h3>Travel Partner</h3>
-						<ul>
-							<li><a href="travel_partner.html">Carbon Neutral Britain</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-xl-2 col-lg-2 col-md-12 col-sm-12 col-12 footerRES">
-					<div class="footerInner">
-						<h3>Legal</h3>
-						<ul>
-							<li><a href="terms_of_website.html">Terms of Website Use</a></li>
-							<li><a href="terms_and_conditions.html">Terms & Conditions</a></li>
-							<li><a href="data_protection_policy.html">Data Protection Policy</a></li>
-							<li><a href="privacy_policy.html">Privacy Policy</a></li>
-							<li><a href="cookies_policy.html">Cookies Policy</a></li>
-							<li><a href="travel_partner.html">Travel Partner</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12 footerRES">
-					<div class="footerInner">
-						<h3>Social Media</h3>
-						<div class="socialIcon">
-							<ul>
-								<li><a href="https://www.facebook.com/travelunraveluk" target="_blank"><img src="images/fb_icon.svg" alt="facebook" loading="lazy" /></a></li>
-								<li><a href="https://www.instagram.com/travelunraveluk" target="_blank"><img src="images/insta_icon.svg" alt="instagram" loading="lazy" /></a></li>
-								<li><a href="https://twitter.com/TravelUnravelUK" target="_blank"><img src="images/twitter_icon.svg" alt="twitter" loading="lazy" /></a></li>
-							</ul>
-						</div>
-						<h3>Reach Us</h3>
-						<div class="addressFooter">
-							<ul>
-								<li>
-									<p>0203 588 8444</p>
-								</li>
-								<li>
-									<p>support@travelunravel.com</p>
-								</li>
-								<li>
-									<p>info@travelunravel.com</p>
-								</li>
-							</ul>
-						</div>
-					</div>
+		<div class="row">
+			<div class="col-lg-12 col-md-12 col-sm-12">
+				<div class="headingTravel">
+					<h2>Our Mission</h2>
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="copy">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12 copyRES">
-					<div class="copyInner">
-						<p>&copy; 2022 Travel Unravel Holidays Private Limited</p>
+		<div class="row">
+			<div class="col-lg-12 col-md-12 col-sm-12">
+				<div class="travelMissionOuter">
+					<div class="travelMissionInner">
+						<i class="material-symbols-outlined">mode_cool</i>
+						<h3>Impact</h3>
+						<p>Reverse your climate impact caused by air travels</p>
 					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</footer>
-<!-- END FOOTER -->
+		
+					<div class="travelMissionInner">
+						<i class="material-symbols-outlined">trending_up</i>
+						<h3>Value</h3>
+						<p>Offsetting flights via Certified Carbon Offsetting Projects</p>
+					</div>
 
-		<!-- js -->
-		<script src="js/jquery.min.js"></script>
-		<script src="js/bootstrap.bundle.min.js"></script>
-	
+					<div class="travelMissionInner">
+						<i class="material-symbols-outlined">query_stats</i>
+						<h3>Transparency</h3>
+						<p>Know where and how we spend your money to make a difference</p>
+					</div>
+		
+					<div class="travelMissionInner">
+						<i class="material-symbols-outlined">verified_user</i>
+						<h3>Quality</h3>
+						<p>In the services provided by our agents and observe the difference in climate change</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section> 
+<!-- END travelMissionMain -->
+
+
+<!-- START plansMain -->
+<section class="plansMain">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12 col-md-12 col-sm-12">
+				<div class="headingTravel">
+				   <h2>Our <span>Plans</span></h2>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+				<div class="tabAreaHome">
+					<ul class="nav nav-tabs">
+						<li class="nav-item">
+							<a class="nav-link active" data-bs-toggle="tab" href="#tab_1">Active</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" data-bs-toggle="tab" href="#tab_2">Upcoming</a>
+						</li>
+					</ul>
+					<div class="tab-content">
+						<div id="tab_1" class="tab-pane active">
+							<div class="priceBlockOuter">
+								<div class="priceBlock">
+									<h3>£6.99</h3>
+									<ul>
+										<li>
+											<p>1.25 tonnes of Carbon Emissions offset in</p>
+											<h4>Economy Class</h4>
+										</li>
+										<li>
+											<p>1 month flying ~6,000 km</p>
+											<h4>(Save 16%)</h4>
+										</li>
+									</ul>
+									<div class="priceBtn">		    			   
+										<a href="#" class="btn btnTheme">Offset Travel</a>
+									</div>
+								</div>
+								<div class="priceBlock">
+									<h3>€250</h3>
+									<ul>
+										<li>
+											<p>5 tonnes of Carbon Emissions offset in</p>
+											<h4>Economy Class</h4>
+										</li>
+										<li>
+											<p>1 month flying ~10,000 km</p>
+											<h4>(Save 16%)</h4>
+										</li>
+									</ul>
+									<div class="priceBtn">		    			   
+										<a href="#" class="btn btnTheme">Offset Travel</a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div id="tab_2" class="tab-pane fade">
+							<div class="priceBlockOuter">
+								<div class="priceBlock">
+									<h3>€70</h3>
+									<ul>
+										<li>
+											<p>15 tonnes of Carbon Emission offset in</p>
+											<h4>Economy Class</h4>
+										</li>
+										<li>
+											<p>12 Month flying ~72,000 km</p>
+											<h4>(Save 16%)</h4>
+										</li>
+									</ul>
+									<div class="priceBtn">		    			   
+										<a href="#" class="btn btnTheme">Offset Travel</a>
+									</div>
+								</div>
+								<div class="priceBlock">
+									<h3>€250</h3>
+									<ul>
+										<li>
+											<p>160 tonnes of Carbon Emission offset in</p>
+											<h4>Economy Class</h4>
+										</li>
+										<li>
+											<p>12 Month flying ~120,000 km</p>
+											<h4>(Save 16%)</h4>
+										</li>
+									</ul>
+									<div class="priceBtn">		    			   
+										<a href="#" class="btn btnTheme">Offset Travel</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+   </div>
+</section>
+<!-- END plansMain -->
+
+
+<!-- START howTravelMain -->
+<section class="howTravelMain">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12 col-md-12 col-sm-12">
+				<div class="headingTravel">
+					<h2>How Do We Do It</h2>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-12 col-md-12 col-sm-12">
+				<div class="howTravelOuter">
+					<div class="howTravelInner">
+						<h3>1</h3>
+						<i class="material-symbols-outlined">network_check</i>
+						<h4>Measure</h4>
+						<p>We calculate your carbon footprint in tonnes of Carbon Emissions</p>
+					</div>
+
+					<div class="howTravelInner">
+						<h3>2</h3>
+						<i class="material-symbols-outlined">network_check</i>
+						<h4>Offset</h4>
+						<p>We offset the footprint by supporting projects working to reverse the Carbon Emissions</p>
+					</div>
+		
+					<div class="howTravelInner">
+						<h3>3</h3>
+						<i class="material-symbols-outlined">workspace_premium</i>
+						<h4>Certification</h4>
+						<p>Once the carbon footprint is offset, you receive a certificate from Travel Unravel & Carbon Neutral Britain</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section> 
+<!-- END howTravelMain -->
+
+<!-- START joinMain -->
+<section class="joinMain">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12 col-md-12 col-sm-12">
+				<div class="joinOuter">
+					<div class="joinLeft joinCommon">
+						<h2>‘Nature is a miracle that we depend upon.’</h2>
+						<h3>Join Us To Save It.</h3>
+					</div>
+
+					<div class="joinRight joinCommon">
+						<img src="images/carbon-logo.png" alt="carbon logo" />
+						<img src="images/logo.svg" alt="logo" />
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section> 
+<!-- END joinMain -->
+
+
+<!-- js -->
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.bundle.min.js"></script>
+
 	
 	<!--========= MOBILE MENU SCRIPT START =========-->
 	<script>
@@ -371,7 +494,7 @@
 	<!-- END radioTab -->
 	
 
-<!-- START Header -->
+<!-- START Header 
 <script>
 $('header').each(function() {
 	$(this).addClass('profile_header').parent().before(this);
@@ -386,8 +509,8 @@ $('section.banner').hide();
 	$(window).on('load', function() {
 		$('#myModal').modal('show');
 	});
-	</script>
-	<!-- END Modal Show on window load -->
+</script>
+<!-- END Modal Show on window load -->
 
 
 
